# C_Qt

./: .gitmodules  CMakeLists.txt  README.cn.md  README.en.md  README.md
C_CustomSignalDemo/: CMakeLists.txt  SignalTest.cpp  defstruct.h  main.cpp  readMe.md
C_Framelesswidget/: CMakeLists.txt  readme.md
C_Framelesswidget/src/: CMakeLists.txt
C_Framelesswidget/src/framelessMessageBox-1/: CMakeLists.txt  uvbasedialog.cc  uvbasedialog.cpp  uvbasedialog.h  uvbasedialog.hpp  uvmessagebox.cc  uvmessagebox.cpp  uvmessagebox.hpp
C_Framelesswidget/src/framelessMessageBox-2/: CMakeLists.txt  uvmessagebox.cc  uvmessagebox.cpp  uvmessagebox.h  uvmessagebox.hpp
C_Framelesswidget/src/framelessdialog/: CMakeLists.txt  framelessdialog.cc  framelessdialog.h  framelessdialog.hpp
C_Framelesswidget/src/framelessmainwindow/: CMakeLists.txt  framelessmainwindow.cc  framelessmainwindow.h  framelessmainwindow.hpp
C_Framelesswidget/src/framelesswidget/: CMakeLists.txt  framelesswidget.cc  framelesswidget.h
C_Framelesswidget/src/test/: CMakeLists.txt  framelessdialog_p.cc  framelessdialog_p.h  framelessdialog_p.hpp  framelessmainwindow_p.cc  framelessmainwindow_p.h  framelessmainwindow_p.hpp  framelesswidget_p.cc  framelesswidget_p.h  framelesswidget_p.hpp  main.cc  main.cpp  test.cc  test.h
C_Framelesswidget/src/uvframelesshelper/: CMakeLists.txt  framelesshelper.cc  framelesshelper.hpp  framelesshelper_p.hpp
C_Layout_scrollBar/: CMakeLists.txt  readMe.md
C_LiveHand/source/: CMakeLists.txt  clivehand.cc  clivehand.h  cplaybackwidget.cc  cplaybackwidget.h  main.cc
C_LiveHand/source/codec/: CMakeLists.txt  ccalcptsdur.cc  codec_p.cc  codec_p.h
C_LiveHand/source/framelessMessageBox/: uvfiledialog.cc  uvmessagebox.cc
C_LiveHand/source/framelessmainwindow/: CMakeLists.txt  framelessmainwindow.h
C_LiveHand/source/global/: cdefine.h  interface_global.h
C_LiveHand/source/splashscreen/: CMakeLists.txt  SplashScreen.cc  SplashScreen.h
C_MaskWidget/src/MaskWidget/: CMakeLists.txt  MaskWidget.cc  MaskWidget.h
C_Patch_management/: .clang-format  CMakeLists.txt  clean.sh  readMe.md  start.sh
C_Patch_management/source/: CMakeLists.txt  C_global.h  cglobal.h  icon.rc  main.cc  mergedir.cc  mergedir.h  patch.cc  patch.h  processfile.cc  processfile.h
C_Patch_management/source/framelessMessageBox/: CMakeLists.txt  uvbasedialog.cc  uvbasedialog.h  uvfiledialog.cc  uvfiledialog.h  uvmessagebox.cc  uvmessagebox.h
C_Patch_management/source/framelessMessageBox-1/: CMakeLists.txt  uvbasedialog.cc  uvbasedialog.h  uvfiledialog.cc  uvfiledialog.h  uvmessagebox.cc  uvmessagebox.h
C_Patch_management/source/framelessmainwindow/: framelessmainwindow.cc  framelessmainwindow.h  framelessmainwindow.hpp  framelessmainwindow_p.hpp
C_Patch_management/source/global/: cglobal.h
C_Patch_management/source/logger/: CMakeLists.txt  Logger.cc  Logger.h  logger.cc  logger.h
C_Patch_management/source/logger_p/: CMakeLists.txt  dualfilelogger.cc  dualfilelogger.hpp  filelogger.cc  filelogger.hpp  logger.cc  logger.hpp  logger_p_global.hpp  logmessage.cc  logmessage.hpp
C_Patch_management/source/logger_redirection/: CMakeLists.txt  logger_redirection.cc  logger_redirection.hpp  logger_redirection_global.hpp
C_Patch_management/source/mergedir/: CMakeLists.txt  mergedir_p.cc  mergedir_p.h
C_Patch_management/source/noticewidget/: CMakeLists.txt  uvnoticewidget.cc  uvnoticewidget.hpp
C_Patch_management/source/splashscreen/: CMakeLists.txt  splashscreen.cc  splashscreen.hpp
C_demo_music/: CMakeLists.txt  readMe.md
C_demo_music/Resources/QmlFile/: AppSystemTrayIcon.qml  Background.qml  DetailFavoritePageView.qml  DetailPlayListPageView.qml  DetailSearchPageView.qml  LayoutHeaderView.qml  MusicBannerView.qml  MusicGridHotView.qml  MusicRoundImage.qml  PageDetailView.qml
C_demo_music/Src/: App.cpp  HttpUtils.cpp  HttpUtils.h
C_material-widgets/: CMakeLists.txt  setup.cmake
C_material-widgets/resource/: resources.rcc
C_material-widgets/src/: CMakeLists.txt
C_material-widgets/src/components/: CMakeLists.txt
C_material-widgets/src/components/lib/: CMakeLists.txt  uvmaterialcheckable.cc  uvmaterialcheckable.hpp  uvmaterialcheckable_internal.cc  uvmaterialcheckable_internal.hpp  uvmaterialcheckable_p.hpp  uvmaterialoverlaywidget.cc  uvmaterialoverlaywidget.hpp  uvmaterialripple.cc  uvmaterialripple.hpp  uvmaterialrippleoverlay.cc  uvmaterialrippleoverlay.hpp  uvmaterialstatetransition.cc  uvmaterialstatetransition.hpp  uvmaterialstatetransitionevent.hpp  uvmaterialstyle.cc  uvmaterialstyle.hpp  uvmaterialstyle_p.hpp  uvmaterialtheme.cc  uvmaterialtheme.hpp  uvmaterialtheme_p.hpp
C_material-widgets/src/components/uvmaterialappbar/: CMakeLists.txt  uvmaterialappbar.cc  uvmaterialappbar.hpp  uvmaterialappbar_p.hpp
C_material-widgets/src/components/uvmaterialautocomplete/: CMakeLists.txt  uvmaterialautocomplete.cc  uvmaterialautocomplete.hpp  uvmaterialautocomplete_internal.cc
C_material-widgets/src/examples/: CMakeLists.txt  main.cc  mainwidget.cc  mainwidget.hpp
C_testffmpeg/source/: CMakeLists.txt  cplaybackwidget.cc  main.cc  playbackwidget.cc  playbackwidget.h  test.cc  test.h
C_testffmpeg/source/codec/: CMakeLists.txt  codec_p.cc  codec_p.h
C_testffmpeg/source/framelessMessageBox/: CMakeLists.txt  uvfiledialog.h  uvmessagebox.h
C_testffmpeg/source/framelessmainwindow/: framelessmainwindow.cc
C_testffmpeg/source/global/: cdefine.h
C_testffmpeg/source/logger/: CMakeLists.txt  logger.cc  logger.h
C_testffmpeg/source/splashscreen/: CMakeLists.txt
C_uvframelesshelper/: CMakeLists.txt  framelesshelper.cpp  framelesshelper.h  framelesshelper_p.h  qxframeless_global.h  说明.md
My_aiqiyi/: CMakeLists.txt  images.qrc  mywidget.cpp  mywidget.h  widget.cpp  widget.h  widget.ui
My_calculator/: CMakeLists.txt  CMakeLists.txt.user.2a07cd0  main.cpp  res.qrc  widget.cpp  widget.h  widget.ui
Thread_pool/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mywork.cpp  mywork.h
sieve_pool/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywork.cpp  mywork.h  res.qrc
(+4093 files in other folders)
