setupQt()

add_subdirectory(lib)
add_subdirectory(uvmaterialappbar)
add_subdirectory(uvmaterialautocomplete)
add_subdirectory(uvmaterialavatar)
add_subdirectory(uvmaterialbadge)
add_subdirectory(uvmaterialcheckbox)
add_subdirectory(uvmaterialcircularprogress)
add_subdirectory(uvmaterialfab)
add_subdirectory(uvmaterialflatbutton)
add_subdirectory(uvmaterialiconbutton)
add_subdirectory(uvmaterialraisedbutton)
add_subdirectory(uvmaterialsnackbar)
add_subdirectory(uvmaterialtextfield)